--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -4457,7 +4457,7 @@
  AFG.liberalism_desc: ""
  AFG.liberalism_2017: "£AFG_liberalism_2017 Basej-e Milli"
  AFG.liberalism_2017_icon: "£AFG_liberalism_2017"
- AFG.liberalism_2017_desc: "Afghanistan Green Trend also known as Rawand-e Sabz-e Afghanistan (Afghanistan Green Trend), is an anti-Taliban Afghan nationalist and pro-democracy political party. Founded by former Afghan intelligence chief Amrullah Saleh, the movement began as a grassroots effort promoting democracy and opposing the Taliban. Now, it is"
+ AFG.liberalism_2017_desc: "Afghanistan Green Trend also known as Rawand-e Sabz-e Afghanistan (Afghanistan Green Trend), is an anti-Taliban Afghan nationalist and pro-democracy political party. Founded by former Afghan intelligence chief Amrullah Saleh, the movement began as a grassroots effort promoting democracy and opposing the Taliban."
  AFG.socialism: "£generic_socialism_small Hezb-e Muttrqa-e Dimukratik"
  AFG.socialism_desc: ""
  AFG.Western_Autocracy: "£AFG_western_autocracy Afghan Independents"
@@ -4496,7 +4496,7 @@
  AFG.Neutral_Muslim_Brotherhood: "£AFG_neutral_muslim_brotherhood Jamiat-e Islami"
  AFG.Neutral_Muslim_Brotherhood_icon: "£AFG_neutral_muslim_brotherhood"
  AFG.Neutral_Muslim_Brotherhood_desc: "A predominantly Tajik political party, Jamiat-e-Islami is the oldest and largest political organisation in Afghanistan, founded by Burhanuddin Rabbani in the 1960s. Originally a student movement at Kabul University, it evolved into a powerful mujahideen group during the Soviet-Afghan War. The party is based on Islamic law and has a communitarian ideology. Under the leadership of Ahmad Shah Massoud, Jamiat became a key player in the Afghan Civil War and the resistance against the Taliban, later forming the Northern Alliance."
- AFG.Neutral_conservatism: "£AFG_neutral_conservatism Naveem"
+ AFG.Neutral_conservatism: "£AFG_neutral_conservatism Naveen"
  AFG.Neutral_conservatism_icon: "£AFG_neutral_conservatism"
  AFG.Neutral_conservatism_desc: "Founded in 2004 by Yunus Qanuni, this political party emerged after Qanuni's departure from the National Movement of Afghanistan. The party briefly led the National Understanding Front of Afghanistan, an opposition alliance, but it became inactive shortly after. In December 2005, a merger was attempted with Jamiat-e Islami, though reports conflicted on whether the merger was fully realized by 2006."
  AFG.Neutral_Communism: "£AFG_neutral_communism Sazman-i Rihayi"
@@ -7976,9 +7976,9 @@
  SLV.Western_Autocracy_Modern_Centre_Party: "£SLV_Modern_Centre_Party Modern Centre Party (SMC)"
  SLV.Western_Autocracy_Modern_Centre_Party_icon: "£SLV_Modern_Centre_Party"
  SLV.Western_Autocracy_Modern_Centre_Party_desc: "Pro-Western Autocrats - Modern Centre Party (Stranka Modernega Centra) is a liberal centre-to-centre-left political party. It promotes the rule of law, liberalising the economy, and cutting red tape to reduce the bureaucratic drain from the state apparatus. Founder Miroslav Cerar Jr created the party, claiming that parliamentary parties needed to provide the necessary foundations for overcoming the social crisis. The party wishes to serve as all-inclusive to a broad demographic of Moderate Voters frustrated with the current ruling alliance"
- SLV.Western_Autocracy_Konkretno: "£SLV_Concretely"
+ SLV.Western_Autocracy_Konkretno: "£SLV_Concretely Concretely"
  SLV.Western_Autocracy_Konkretno_icon: "£SLV_Concretely"
- SLV.Western_Autocracy_Konkretno_desc: "Pro-Western Autocrats -Concretely (Konkretno ) is a conservative-liberal party formed from the merger of Stranka Modernega Centra and Gospodarsko aktivna stranka, along with the absorption of smaller local parties. Upon the merger, Konkretno's membership in the Alliance of Liberals and Democrats for Europe Party was terminated."
+ SLV.Western_Autocracy_Konkretno_desc: "Pro-Western Autocrats - Concretely (Konkretno) is a conservative-liberal party formed from the merger of Stranka Modernega Centra and Gospodarsko aktivna stranka, along with the absorption of smaller local parties. Upon the merger, Konkretno's membership in the Alliance of Liberals and Democrats for Europe Party was terminated."
  SLV.conservatism: "£SLV_Slovenian_Peoples_Party Slovenian People's Party (SLS)"
  SLV.conservatism_icon: "£SLV_Slovenian_Peoples_Party"
  SLV.conservatism_desc: "Conservative - Slovenian People's Party (Slovenska ljudska stranka).The Slovenian People's Party (Slovenska ljudska stranka) is a Christian and agrarian-based party established in 1988, originally known as the Slovenian Peasant Union (Slovenska kmečka zveza). The Slovenian Peasant Union was the first openly non-communist party in Slovenia since 1945, and its establishment is considered one of the critical events of the 1988 Slovenian Spring.\nIn 1991, the party changed its name to the current Slovenian People's Party, alluding to the pre-war Catholic conservative Slovene People's Party. This renaming caused controversy with the Slovene Christian Democrats, who considered themselves the official heirs of the pre-war Slovene People's Party, having merged with the historical Slovene People's Party while in exile."
@@ -7986,7 +7986,7 @@
  SLV.liberalism_icon: "£SLV_Liberal_Democracy_of_Slovenia"
  SLV.liberalism_desc: "Liberalism - Liberal Democracy of Slovenia (Liberalna demokracija Slovenije) is a social liberal pro-European party. The LDS was formed from the Union of Socialist - (Liberal Party) as a part of the governing coalitions in Slovenia from 1992"
  SLV.liberalism_Positive_Slovenia: "£SLV_Positive_Slovenia Positive Slovenia (PS)"
- SLV.liberalism_icon_Positive_Slovenia: "£SLV_Positive_Slovenia"
+ SLV.liberalism_icon: "£SLV_Positive_Slovenia"
  SLV.liberalism_Positive_Slovenia_desc: ""
  SLV.liberalism_List_of_Marjan: "TODO List of Marjan Šarec (LMŠ)"
  SLV.liberalism_List_of_Marjan_icon: "TODO"
@@ -8039,8 +8039,8 @@
  SLV.Neutral_green_party: "£SLV_Greens_of_Slovenia Greens of Slovenia"
  SLV.Neutral_green_party_icon: "£SLV_Greens_of_Slovenia"
  SLV.Neutral_green_party_desc: "Green Politics - Zeleni Slovenije (Greens of Slovenia) is a green, liberal-conservative party formed during the 1989 revolution when Slovenia was under Yugoslav rule. However, in 1996, the party faced a rift with the National Assembly due to allegations of insufficient leadership."
- SLV.Neutral_green_coalition: "£non_aligned_greens Greens of Slovenia"
- SLV.Neutral_green_coalition_icon: "£SLV_non_aligned_greens Green Politics - Zeleni Slovenije (Zeleni Slovenije)  is a green, liberal-conservative party formed during the 1989 revolution when Slovenia was under Yugoslav rule. However, in 1996, the party faced a rift with the National Assembly due to allegations of insufficient leadership."
+ SLV.Neutral_green_coalition: "£SLV_non_aligned_greens Greens of Slovenia"
+ SLV.Neutral_green_coalition_icon: "£SLV_non_aligned_greens"
  SLV.Neutral_green_coalition_desc: "Green Coalition / United Greens"
  SLV.Neutral_green_Youth_party: "£slv_youth_party Youth Party"
  SLV.Neutral_green_Youth_party_icon: "£slv_youth_party"
@@ -8057,7 +8057,7 @@
  SLV.Nat_Populism_desc: "Right-Wing Populism - Slovenian National Party (Slovenska nacionalna stranka) is a national populist party founded by Zmago Jelinčič Plemeniti. In 1993, dissenting factions broke from the party and formed the Slovenian National Right and the National Party of Labor, with many dissenting members being supporters of the Slovene Home Guard who objected to Jelinčič's support of the Slovene Partisans.The party's ideology is strongly anti-clerical, advocating for a firm laicist position, and it opposes LGBT rights. It is also against the privatization of state-owned enterprises. Additionally, the party has called for changes to the national flag and coat of arms, arguing that the current symbols are associated with certain World War II paramilitary groups and lack a distinctly Slovenian historical character. The Slovene National Party shows sympathy for the Slovenian resistance to fascism and the former Yugoslav communist regime of Tito. It opposes Slovenia's membership in the European Union and NATO. The party's leaders have been accused of chauvinist and even racist attitudes towards certain minorities, particularly Slovenia's Romani population."
  SLV.Nat_Fascism: "£SLV_Here_Is_Slovenija Tukaj je Slovenija"
  SLV.Nat_Fascism_icon: "£SLV_Here_Is_Slovenija"
- SLV.Nat_Fascism_desc: "Fascist - Tukaj je Slovenija Translation being Here Is Slovenia is a far-right organization that operates a web forum actively engaged in recruiting young people. The group uses its online presence to promote its ideology and attract youth to its cause. Slovenska vojska"
+ SLV.Nat_Fascism_desc: "Fascist - Tukaj je Slovenija Translation being Here Is Slovenia is a far-right organization that operates a web forum actively engaged in recruiting young people. The group uses its online presence to promote its ideology and attract youth to its cause."
  SLV.Nat_Autocracy: "£SLV_nationalist_military_junta Slovenian Armed Forces (SAF/SV)"
  SLV.Nat_Autocracy_icon: "£SLV_nationalist_military_junta"
  SLV.Nat_Autocracy_desc: "Military Junta - Slovenian Armed Forces (Slovenska vojska) The current Slovenian Armed Forces originated from the Teritorialna Obramba Republike Slovenije (Slovenian Territorial Defence ), formed in 1990 by merging the Territorial Defence originally established in 1968 as a paramilitary force within Yugoslavia. When Slovenia declared independence in 1991, the Slovenian Territorial Defence and Police engaged the Yugoslav People's Army during the Ten-Day War. The Slovenian Armed Forces were officially established in 1994, reorganizing the Slovenian Territorial Defence Force."
