--- a/localisation/english/MD_focus_AFG_l_english.yml
+++ b/localisation/english/MD_focus_AFG_l_english.yml
@@ -32,8 +32,8 @@
  AFG_CIA_Predator_surveillance_drones_desc: "CIA Predator surveillance drones have shown to been instrumental in providing extensive coverage of the terrain, identifying key points of interest, and pinpointing hostile targets."
  AFG_Appeal_to_Washington_for_support: "Appeal to Washington for Support"
  AFG_Appeal_to_Washington_for_support_desc: "In the face of ongoing conflict and the threat posed by extremist factions, Afghanistan must seek the support of international allies to strengthen its military capabilities"
- AFG_IMU_Counterweight: "IMU Counterweight"
- AFG_IMU_Counterweight_desc: "To counter this menace, Afghanistan seeks assistance from Uzbekistan to conduct targeted airstrikes against IMU strongholds. This collaboration aims to weaken the IMU's capabilities, disrupt their operations, and restore security along the border regions" 
+ AFG_IMU_Countermeasures: "IMU Countermeasures"
+ AFG_IMU_Countermeasures_desc: "To counter this menace, Afghanistan seeks assistance from Uzbekistan to conduct targeted airstrikes against IMU strongholds. This collaboration aims to weaken the IMU's capabilities, disrupt their operations, and restore security along the border regions" 
  AFG_Shura_system: "Reinforce the Shura System"
  AFG_Shura_system_desc: "Strengthening the Shura system within the Northern Alliance is crucial for maintaining unity and effective governance. By reinforcing this traditional council-based decision-making structure, we ensure that all factions are represented."
  AFG_Anjuman_Pass_desc: "Ahmed Shah Massoud, also known as the Lion of Panjshir, stands as a symbol of resistance and tactical leadership. By rallying around his ideas, the nation aims to adopt his strategies, inspire the troops, and solidify its defenses. His leadership principles have and will guide Afghanistan through its current struggles"
@@ -81,7 +81,7 @@
   AFG_Reinforce_the_Government: "Reinforce the Government"
  AFG_Reinforce_the_Government_desc: "With our new control over the southern regions of the nation, we believe it’s a good start to command opposition and bring our leadership into the light of many."
  AFG_Agricultural_Modernisation: "Agricultural Modernisation"
- AFG_The_Farmer_and_their_Rifle: "The Farmer and thier Rifle"
+ AFG_The_Farmer_and_their_Rifle: "The Farmer and their Rifle"
  AFG_The_Farmer_and_their_Rifle_desc: "With a thirst to cut through blood and bone to protect their homeland, Afghanistan's rural inhabitants have shown to be a backbone to the state. Losing support from this community would be the first domino leading to our fall."
  AFG_Inheritor_of_Afghanistan: "Inheritor of Afghanistan"
  AFG_Inheritor_of_Afghanistan_desc: "Afghanistan has only truly been peaceful under our rule. We have become the inheritors of the Afghan state and should be praised for this achievement, not dismissed by global powers."
@@ -119,7 +119,7 @@
  AFG_Atlanticism_desc: "Atlanticism is a pro-movement of North American and European states, coined after the Second World War. Afghanistan wishes to adopt a more Western model in terms of progress and governance."
  AFG_Arsenal_of_Democracy: "Arsenal of Democracy"
  AFG_Arsenal_of_Democracy_desc: "With the American arms economy booming, we should leverage this to our advantage by stocking up and preparing for the challenges that lie ahead."
- AFG_The_Republic_Survives_Another_day: "The Republic Survives Another Day"
+ AFG_The_Republic_Survives_Another_day: "The Republic Survived Another Day"
  AFG_The_Republic_Survives_Another_day_desc: "As night fades into day, the banner of the Afghan people stands strong. Ready for whatever lies ahead, be it peace or war. One thing remains certain: the republic will endure until its last breath."
  AFG_Defenders_of_Democracy: "Defenders of Democracy"
  AFG_Defenders_of_Democracy_desc: "From a state with little concept of democracy to a new regime fully embracing it is unprecedented. We must fulfill our duty and protect this nation and its ideals at all costs."
@@ -161,15 +161,13 @@
  AFG_Return_of_Dostum: "Return of Dostum"
  AFG_Return_of_Dostum_desc: "General Abdul Rashid Dostum, a prominent Afghan military leader and influential figure, is making a return to the national stage. Known for his formidable command of the Uzbek forces and his strategic acumen"
  AFG_Mission_to_Tehran: "Mission to Tehran"
- AFG_Mission_to_Tehran_desc: "n a bid to strengthen regional alliances and counter external threats, Afghanistan is embarking on a diplomatic mission to Tehran. By joining the Iran-led Axis of Resistance, Afghanistan aims to secure powerful allies, enhance its military capabilities, and bolster its geopolitical standing"
+ AFG_Mission_to_Tehran_desc: "In a bid to strengthen regional alliances and counter external threats, Afghanistan is embarking on a diplomatic mission to Tehran. By joining the Iran-led Axis of Resistance, Afghanistan aims to secure powerful allies, enhance its military capabilities, and bolster its geopolitical standing"
  AFG_Take_command_of_Rabbanis_Feyzabad_forces: "Commanding Rabbani's Feyzabad Forces"
  AFG_Take_command_of_Rabbanis_Feyzabad_forces_desc: "Burhanuddin Rabbani's forces stationed in Feyzabad are crucial for controlling the northeastern regions of Afghanistan. By taking direct command of these forces, the central leadership aims to unify command structures, enhance coordination, and bolster the defense of this strategically important area"
  AFG_The_new_Afghani: "The New Afghani"
- AFG_The_new_Afghani_desc: "Recognizing the inefficacies and corruption within the current system, a visionary leadership aims to rebuild Afghanistan from the ground up. This initiative, dubbed The New Afghani,"
- AFG_Karim_Khalilis_new_offensive: "Karim Khalilis New Offensive"
+ AFG_The_new_Afghani_desc: "Recognizing the inefficacies and corruption within the current system, a visionary leadership aims to rebuild Afghanistan from the ground up. This initiative, dubbed The New Afghani,will open new era of Afghanistan."
+ AFG_Karim_Khalilis_new_offensive: "Karim Khalili's New Offensive"
  AFG_Karim_Khalilis_new_offensive_desc: "Karim Khalili, a prominent leader and strategist, is spearheading a bold new offensive to reclaim key territories and push back against hostile forces. His plan involves a combination of guerrilla tactics, mobilization of local militias, and strategic coordination with allied forces."
- AFG_The_IMU_Counterweight: "The IMU Counterweight"
- AFG_The_IMU_Counterweight_desc: "To counter this menace, Afghanistan seeks assistance from Uzbekistan to conduct targeted airstrikes against IMU strongholds. This collaboration aims to weaken the IMU's capabilities, disrupt their operations, and restore security along the border regions" 
  #MISC stuff 
  AFG_western_klep_TT1: "§YHijacking Foreign Aid§! impact on §YAdditional Income§! $§G0.18§! Billion"
  AFG_Agro_mech: "Agriculture"
@@ -432,7 +430,7 @@
  AFG_Afghan_National_Assembly: "Afghan National Assembly"
  AFG_Afghan_National_Assembly_desc: "The Afghan Parliament, officially titled the National Assembly (Shura-e Milli), has been a pivotal legislative institution in Afghanistan, adapting to varying political structures, including monarchy, republicanism, communism, and democracy across its timeline."
  AFG_Establishing_Supply_Lines: "Establishing Supply Lines"
- AFG_Establishing_Supply_Lines_desc: "By establishing well-kept, and well-maintained suppy lines, our troops will be sufficiently supplied in order to keep fighting."
+ AFG_Establishing_Supply_Lines_desc: "By establishing well-kept, and well-maintained supply lines, our troops will be sufficiently supplied in order to keep fighting."
  AFG_Russian_technical_specialists: "Russian Technical Specialists"
  AFG_Russian_technical_specialists_desc: "We have brought in specialists from [SOV.GetFlag] Russia to work on our mechanized units."
  AFG_The_shura_system_idea: "The Shura System"
@@ -604,7 +602,7 @@
  AfghanistanNews.14.a: "The Afghan people need us."
 
  #Investment
- Afghanistan.32.t: "The Castle called Taikhan has fallen"
+ Afghanistan.32.t: "The Castle called Taloqan has fallen"
  Afghanistan.32.d: "The Taliban's ruthless capture prompted a mass exodus, as civilians fled towards Imam Sahib and the Panjshir Valley. After a brutal siege claiming hundreds of civilian lives, our soldiers halted the Taliban's advance to the city's north and east but couldn't reclaim it. We've abandoned our Northern Alliance headquarters in the city, relocating our base of operations to Fayzabad."
  Afghanistan.32.a: "Ruzxoi Tira"
  Afghanistan.31.t: "Taloqan stands fight Another day"
