--- a/localisation/english/MD_focus_ROM_l_english.yml
+++ b/localisation/english/MD_focus_ROM_l_english.yml
@@ -277,9 +277,9 @@
  ROM_european_security: "Contributing to European Security"
  ROM_european_security_desc: "It is essential we contribute to the defense of european ideals by participating in training exercises and providing our resource pool to our allies."
  ROM_eu_work_contracts: "Sign Work Contracts With the EU"
- ROM_eu_work_contracts_desc: "By signing an agreement through which European studies in Romania are recognized and vice-versa we can create a new export: professional services. Like this, we will also improve the daily "
+ ROM_eu_work_contracts_desc: "By signing an agreement through which European studies in Romania are recognized and vice-versa we can create a new export in the form of professional services. Like this, we will also improve the daily life of Romanian citizens."
  ROM_through_oursleves: "Through Ourselves"
- ROM_through_oursleves_desc: "By lower our dependence on foreign countries while increasing our independence we can guarantee the prosperty of Romania. Only through our ourselves will we triumph!"
+ ROM_through_oursleves_desc: "By lower our dependence on foreign countries while increasing our independence we can guarantee the prosperity of Romania. Only through our ourselves will we triumph!"
  ROM_pnl_economic_reforms: "Romanian Economic Reforms"
  ROM_pnl_economic_reforms_desc: "The economy has been in shambles for the better part of the past 30 years, and band-aid reforms have only worsened our situation. We need real, comprehensive measures if we are to save our country."
  ROM_continue_privatization: "Continue Privatization of State Companies"
@@ -357,9 +357,9 @@
  ROM_redeem_anti_communists: "Redeem Anti-Communist Dissidents"
  ROM_redeem_anti_communists_desc: "It's important we restore the image of those who helped fight the communist regime. Of course, there will be some exceptions, most importantly those associated with the Iron Guard, but otherwise there won't be any controversies or issues."
  ROM_investigate_former_regime_pawns: "Investigate Former Pawns Of the Regime"
- ROM_investigate_former_regime_pawns_desc: ""
+ ROM_investigate_former_regime_pawns_desc: "Collaborators of the communist regime, unless truly justified, should be investigated for the crimes they committed by actively helping and supporting the Securitate with intelligence they otherwise would've not gotten."
  ROM_reinforce_christian_morality: "Reinforce Christian Morality"
- ROM_reinforce_christian_morality_desc: ""
+ ROM_reinforce_christian_morality_desc: "At the end of the day, we are a christian population, even if we belong to different denominations. We should not let the perversions of the BOR hinder the Christian teachings of love, compassion and unity."
  ROM_crackdown_on_crime: "Crackdown On Crime"
  ROM_crackdown_on_crime_desc: "Organized crime has no place in our territory."
  ROM_moral_romania: "A Moral Romania"
@@ -996,7 +996,7 @@
  ROM_unite_banat: "Unite Banat"
  ROM_unite_banat_desc: "The Treaty of Versailles enacted a grave injustice on Banat by seperating it into two halves. While the Serbs have been our allies and close friends for decades now, we cannot deny the poor treatment they inflict onto the Romanians living within their borders, and so they cannot be trusted to continue controlling West Banat. They will get one chance to repent for their sins, but refusal or resistance will be crushed by our righteous might!"
  ROM_the_reunification_of_all_romanians: "The Re-Unification Of All Romanians"
- ROM_the_reunification_of_all_romanians_desc: "After years, our national ideal has finally been achieved. No longer will the Romanians be forced to bow to a foreign oppressor, no longer have to learn a language that isn't their, no longer will they have to suffer under the auspicious whip of a careless pillager. They will finally be able to say in unison, from the Tisza to the Dnister and the Black Sea:'§CLong Live Greater Romania§!'"
+ ROM_the_reunification_of_all_romanians_desc: "After years, our national ideal has finally been achieved. No longer will the Romanians be forced to bow to a foreign oppressor, no longer have to learn a language that isn't their, no longer will they have to suffer under the arbitrary whip of a careless pillager. They will finally be able to say in unison, from the Tisza to the Dnister and the Black Sea:'§CLong Live Greater Romania§!'"
  ROM_launch_propaganda_campaigns: "Launch Propaganda Campaigns"
  ROM_launch_propaganda_campaigns_desc: "Through carefully crafted messages, imagery, and narratives, we will capture the hearts and minds of the Romanian people, instilling in them a deep sense of pride, loyalty, and unity. Whether promoting the achievements of our leadership, demonizing our enemies, or inspiring patriotism and sacrifice, our propaganda campaigns will be relentless and pervasive, leaving no corner untouched by our message."
  ROM_united_in_orthodoxy: "United In Orthodoxy"
