--- a/localisation/english/MD_focus_ROM_l_english.yml
+++ b/localisation/english/MD_focus_ROM_l_english.yml
@@ -861,7 +861,7 @@
  ROM_continue_with_the_old: "Continue With The Old"
  ROM_continue_with_the_old_desc: "We broke and can't afford new AK-47s. I wish I was joking."
  ROM_expand_conscription: "Expand Conscription"
- ROM_expand_conscription_desc: "The Army constantly has a deficit of manpower, even if military service is mandatory. By lowering the draft age we can hopefully squeeze a fewe thousand more fresh recruits."
+ ROM_expand_conscription_desc: "The Army constantly has a deficit of manpower, even if military service is mandatory. By lowering the draft age we can hopefully squeeze a few thousand more fresh recruits."
  ROM_guerilla_warfare: "Guerilla Warfare"
  ROM_guerilla_warfare_desc: "Past military doctrines focused on guerrila warfare, the idea being to bleed out an overwhelming enemy force before they can make meaningful gains, all the while harassing their supply lines. And you know what? That is a very good doctrine."
  ROM_unit_autonomy: "Unit Autonomy"
@@ -902,8 +902,8 @@
  ROM_focus_on_training_desc: "What use is sending a soldier into battle when he can barely hold a gun? More training wouldn't hurt."
  ROM_death_from_above: "Death From Above"
  ROM_death_from_above_desc: "First, we make the enemy afraid of what is before him and then we make him afraid of what is above him. By controlling the skies we can inflict maximum casualties, and then become able to use our airborn units to cause even more havoc."
- ROM_aircraft_aquisition: "Aircraft Aquisition"
- ROM_aircraft_aquisition_desc: "It will take a long while until we develop a new plane, so for the time being we are better off buying foreign models."
+ ROM_aircraft_acquisition: "Aircraft Acquisition"
+ ROM_aircraft_acquisition_desc: "It will take a long while until we develop a new plane, so for the time being we are better off buying foreign models."
  ROM_aa_warfare: "AA Warfare"
  ROM_aa_warfare_desc: "AA has always represented an important part of the army, but the increasing use of drones has made the use of anti air essential. By arming our soldiers with these weapons, we can prevent more casualties."
  ROM_asr_brasov: "IAR Brasov"
@@ -925,11 +925,11 @@
  ROM_new_dolphin: "The New Dolphin"
  ROM_new_dolphin_desc: "The Doplhin was our sole nucll intoimdisne, but due to a lack of funds it fell into disrepair and now is nothing more than a glorified museum. We shall seek a replacement to further streghten our hold in the Black Sea."
  ROM_modernize_the_fleet: "Modernize The Fleet"
- ROM_modernize_the_fleet_desc: "The entire fleet is basically an outdated ruin. We shall reach out to our allies to see if we can buy some of their decomissioned ships, they would be miles away from what we have right now anyway."
+ ROM_modernize_the_fleet_desc: "The entire fleet is basically an outdated ruin. We shall reach out to our allies to see if we can buy some of their decommissioned ships, they would be miles away from what we have right now anyway."
  ROM_invest_in_the_naval_academy: "Invest In The Naval Academy"
  ROM_invest_in_the_naval_academy_desc: "The lack of modern equipment is not helped by the lack of competent officers. Our main way to counter this issue is through the Constanta Naval Academy. By modernizing it, we can attract more students and thus increase our ranks."
- ROM_master_of_the_pontus_euximus: "Master Of The Pontus Euximus"
- ROM_master_of_the_pontus_euximus_desc: "Through our investments, reforms and modernization programs we were able to guarantee our control over the Black Sea, at least for the time being."
+ ROM_master_of_the_pontus_euxinus: "Master Of The Pontus Euxinus"
+ ROM_master_of_the_pontus_euxinus_desc: "Through our investments, reforms and modernization programs we were able to guarantee our control over the Black Sea, at least for the time being."
  
  ROM_greater_romania_party: "The Greater Romania Party"
  ROM_greater_romania_party_desc: "Founded in 1991, the Greater Romania Party, under the leadership of Vadim, emerged as a formidable force in the political landscape. With its fervent nationalism and unwavering commitment to reclaiming lost territories, the party swiftly garnered support among those disillusioned with the status quo. Having won a clear victory in the elections, and powered by a potent blend of populism and xenophobia, the promises to restore Romania to its former glory. Yet, beneath the veneer of patriotism lay a darker agenda...much darker than many of its voters realized."
