--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -259,6 +259,9 @@
  TAJ_attack_pamir_desc: "Striking Pamir will allow us to create a land corridor and easy access to the Southern Pamirs, and Batken."
  TAJ_pamir_occupation_desc: "We must hold Pamir for about 270 days before the locals can finally accept Tajik rule over their territory."
  TAJ_pamir_area: "Pamirs Region"
+ TAJ_internal_policies: "Policies of [TAJ.GetFlag] Tajikistan"
+ TAJ_uzbekistan_puppet: "Establish the [UZB.GetFlag] Uzbek Autonomous Region"
+ TAJ_uzbekistan_puppet_desc: "Following the righteous revolt in Uzbekistan, we can finally assert our administrations control over the nation."
 
 # Tooltips
  TAJ_puppet_if_win_TT: "£decision_icon_small §YUnlocks§! decision to puppet them as an §Hautonomous region§! if they win"
