more designer work

--- a/localisation/english/replace/replaced_from_designer_l_english.yml
+++ b/localisation/english/replace/replaced_from_designer_l_english.yml
@@ -94,7 +94,7 @@
  tank_designer_artillery_role_disallowed: "Add a module that allows the §HArtillery§! role to be able to switch to it."
  tank_designer_anti_tank: "Light Tank"
  tank_designer_anti_tank_role_disallowed: "Add a module that allows the §HTank Destroyer§! role to be able to switch to it."
- tank_designer_rocket: "MLRS"
+ tank_designer_rocket: "Multiple Launch Rocket System"
  tank_designer_rocket_role_disallowed: "Add a module that allows the §HRocket Artillery§! role to be able to switch to it."
  tank_designer_flame: "Infantry Fighting Vehicle"
  tank_designer_flame_role_disallowed: "Add a module that allows the §HFlame§! role to be able to switch to it."
