--- a/localisation/english/MD_focus_ROM_l_english.yml
+++ b/localisation/english/MD_focus_ROM_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
  romanian_focus: "Romanian Focus Tree"
  #traits
- ROM_banker: "Backround: Banker"
- ROM_economist: "Backround: Economist"
+ ROM_banker: "Background: Banker"
+ ROM_economist: "Background: Economist"
  ROM_tribunul: "Tribunul"
  ROM_queen_of_spades_trait: "Queen Of Spades"
  ROM_king_of_hearts_trait: "King Of Hearts"
