--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -389,33 +389,60 @@
  GER_Weltraumkommando_der_Bundeswehr: "Bundeswehr Space Command"
  GER_Weltraumkommando_der_Bundeswehr_desc: "The creation of the Space Command within the Bundeswehr serves as a strategic initiative to centralize the proficiency in satellite reconnaissance and airspace radar. This consolidation enables us to project strength and deterrence against our adversaries while simultaneously enhancing trust and collaboration with our allies. By leveraging cutting-edge technologies and capabilities in space-based surveillance, the Space Command reinforces our military readiness and situational awareness, enabling us to respond effectively to evolving security threats. Furthermore, it demonstrates our commitment to safeguarding not only our own interests but also those of our allied nations, contributing to a more secure and stable international environment."
 
- ### Defensive Tree
- GER_V_fall_Decision: "The V-Fall"
- GER_V_fall_Decision_desc: "The integrity of the Bundesrepublik is in danger, our enemy attacked us when we seemed weak. But we prepared for this day, by declaring the Verteidigungsfall (defense case) we can enact a series of laws to strengthen our government and armed forces."
- GER_emergency_parliament: "Form The Emergency Parliament"
- GER_emergency_parliament_desc: "The current situation makes it impossible for all elected members of the parliament to be present in Berlin. The Joint Committee, which will consist of 48 members of all factions currently sitting in the Bundestag, is formed of Bundestag and Bundesrat members and merges both institutions into one reduced quorate parliament."
- GER_change_of_leadership: "Transfer Army Command"
- GER_change_of_leadership_desc: "Not our Defence Minister, but our chancellor [GER.GetLeader] commands our troops during wartime. He has the final word about our troop movements and retaliation against the enemy."
- GER_burgfrieden: "Burgfrieden"
- GER_burgfrieden_desc: "With the formation of the emergency parliament, we included all parties in the government. But we can't be embroiled in political turmoils while our army fights on all fronts, all parties need to understand the bigger goal, to survive."
- GER_soldiers_interior: "Soldiers In The Interior"
- GER_soldiers_interior_desc: "Because of Germany's troubling past, german lawmakers tried to restrain the use of the army in the interior as much as possible. But in the current situation, we need every help we can get. Soldiers will help or take over functions where other institutions can't or won't."
- GER_recall_soldiers: "Recall Our Soldiers Abroad"
- GER_recall_soldiers_desc: "Some soldiers are still on missions around the world, together with their equipment. We need them here now, at least till this war is over."
- GER_call_reservists: "Call in The Reservists"
- GER_call_reservists_desc: "The reservists are a massive force of already trained men and women currently working in the civilian sector. With them, we can grow our army substantially in just some days and bring them to the front, till we trained the recruits."
- GER_mobilize_nation: "Mobilize The Nation"
- GER_mobilize_nation_desc: "Now that we stabilized our frontlines, we need more men to push back the enemy and hold the lines. All men between the age of 18 and 60 will be conscripted to serve in the army and fight for our country."
- GER_conscript_pacifists: "Deal With The KDV"
- GER_conscript_pacifists_desc: "The KDV (Kriegsdienstverweigerer) is a group of people who refuse to handle a weapon in any way. Normally we would send them to a hospital or other public institutions, which helps our war effort, to work there, but as were fighting an active war it might be better to 'convince' them."
- GER_conscript_women: "Women On The Frontline"
- GER_conscript_women_desc: "With the war raging on, it becomes clear that we need to decide what we do with our female workforce. As we need more and more replacements for our troops on the front, we could help this by drafting capable women, without children they need to keep care of, into our army."
- GER_last_stand: "Total War"
- GER_last_stand_desc: "Days, Months and soon even years passed without a clear victor, we need to send everything we have, spend everything we saved, try everything we got to come out as the winner at the end of this conflict."
- GER_Terroitorial_Defense: "Call in Territorial Defence"
- GER_fortifications_I: "Rebuild Cold war fortifications in Schleswig-Holstein"
- GER_fortifications_II: "Rebuild Cold war fortifications in Niedersachsen"
- GER_fortifications_III: "Rebuild Cold war fortifications in the South"
+ #### Defensive Tree
+ #GER_V_fall_Decision: "The V-Fall"
+ #GER_V_fall_Decision_desc: "The integrity of the Bundesrepublik is in danger, our enemy attacked us when we seemed weak. But we prepared for this day, by declaring the Verteidigungsfall (defense case) we can enact a series of laws to strengthen our government and armed forces."
+ #GER_emergency_parliament: "Form The Emergency Parliament"
+ #GER_emergency_parliament_desc: "The current situation makes it impossible for all elected members of the parliament to be present in Berlin. The Joint Committee, which will consist of 48 members of all factions currently sitting in the Bundestag, is formed of Bundestag and Bundesrat members and merges both institutions into one reduced quorate parliament."
+ #GER_change_of_leadership: "Transfer Army Command"
+ #GER_change_of_leadership_desc: "Not our Defence Minister, but our chancellor [GER.GetLeader] commands our troops during wartime. He has the final word about our troop movements and retaliation against the enemy."
+ #GER_burgfrieden: "Burgfrieden"
+ #GER_burgfrieden_desc: "With the formation of the emergency parliament, we included all parties in the government. But we can't be embroiled in political turmoils while our army fights on all fronts, all parties need to understand the bigger goal, to survive."
+ #GER_soldiers_interior: "Soldiers In The Interior"
+ #GER_soldiers_interior_desc: "Because of Germany's troubling past, german lawmakers tried to restrain the use of the army in the interior as much as possible. But in the current situation, we need every help we can get. Soldiers will help or take over functions where other institutions can't or won't."
+ #GER_recall_soldiers: "Recall Our Soldiers Abroad"
+ #GER_recall_soldiers_desc: "Some soldiers are still on missions around the world, together with their equipment. We need them here now, at least till this war is over."
+ #GER_call_reservists: "Call in The Reservists"
+ #GER_call_reservists_desc: "The reservists are a massive force of already trained men and women currently working in the civilian sector. With them, we can grow our army substantially in just some days and bring them to the front, till we trained the recruits."
+ #GER_mobilize_nation: "Mobilize The Nation"
+ #GER_mobilize_nation_desc: "Now that we stabilized our frontlines, we need more men to push back the enemy and hold the lines. All men between the age of 18 and 60 will be conscripted to serve in the army and fight for our country."
+ #GER_conscript_pacifists: "Deal With The KDV"
+ #GER_conscript_pacifists_desc: "The KDV (Kriegsdienstverweigerer) is a group of people who refuse to handle a weapon in any way. Normally we would send them to a hospital or other public institutions, which helps our war effort, to work there, but as were fighting an active war it might be better to 'convince' them."
+ #GER_conscript_women: "Women On The Frontline"
+ #GER_conscript_women_desc: "With the war raging on, it becomes clear that we need to decide what we do with our female workforce. As we need more and more replacements for our troops on the front, we could help this by drafting capable women, without children they need to keep care of, into our army."
+ #GER_last_stand: "Total War"
+ #GER_last_stand_desc: "Days, Months and soon even years passed without a clear victor, we need to send everything we have, spend everything we saved, try everything we got to come out as the winner at the end of this conflict."
+ #GER_Terroitorial_Defense: "Call in Territorial Defence"
+ #GER_fortifications_I: "Rebuild Cold war fortifications in Schleswig-Holstein"
+ #GER_fortifications_II: "Rebuild Cold war fortifications in Niedersachsen"
+ #GER_fortifications_III: "Rebuild Cold war fortifications in the South"
+
+ ### V-Fall ###
+
+ GER_Declare_V_Fall: "Den Verteidigungsfall Ausrufen"
+ GER_Declare_V_Fall_desc: "The Verteidigungsfall represents the declaration of a national defense emergency in Germany, triggered when the country's sovereignty or territorial integrity is directly threatened. Under this status, the 'Lex Churchill' is invoked, a constitutional provision that transfers supreme command of the Bundeswehr from the Minister of Defense to the Bundeskanzler, granting the Chancellor direct control over all military operations. Civil liberties may be temporarily restricted as the state mobilizes its full defensive potential. Additionally, critical infrastructure will be secured, and defense strategies prioritized, ensuring that Germany can respond swiftly and decisively to any threat."
+ 
+ GER_Integrate_NL: "Integration of the Dutch Armed Forces"
+ GER_Integrate_NL_desc: "With deepened military cooperation, Germany has the opportunity to take partial control over the Dutch armed forces. This measure seeks to unify command structures and improve overall defense coordination. By integrating Dutch units under German leadership, the efficiency and strength of the Western European defense strategy can be significantly enhanced, reinforcing the security of both nations."
+ 
+ GER_Territorial_Defense: "Mobilize Territorial Defense"
+ GER_Territorial_Defense_desc: "The Wehrbereichskommandos, Germany's regional military commands, are being mobilized to increase defensive capacity throughout the country. These units, responsible for coordinating local defense efforts, will play a crucial role in securing key areas and organizing the territorial defense structure in preparation for any potential threats."
+ 
+ GER_call_reservists: "Call Up the Reservists"
+ GER_call_reservists_desc: "Non-active brigades, such as Panzerbrigade 8 and Panzergrenadierbrigades 32, 5, and 2, along with the country's remaining reservists, are to be activated. These units will augment the regular forces, bolstering the nation's defensive capabilities by providing additional manpower and equipment in the face of growing military threats."
+ 
+ GER_fortifications_I: "Rebuild Fortifications in Schleswig-Holstein"
+ GER_fortifications_I_desc: "Reconstruct and modernize the old fortifications in Schleswig-Holstein, aimed at defending against potential incursions from the former East German territories. These fortifications will strengthen Germany's northern defensive line."
+ 
+ GER_fortifications_II: "Rebuild Fortifications in Lower Saxony"
+ GER_fortifications_II_desc: "In response to the rising threat from the east, Germany is revitalizing the fortifications in Lower Saxony. These defensive structures will serve as a critical buffer, safeguarding key strategic locations from potential enemy advances."
+ 
+ GER_fortifications_III: "Rebuild Fortifications in Hessen and Bayern"
+ GER_fortifications_III_desc: "To secure the southern regions of Hessen and Bayern, Germany is rebuilding and enhancing its fortifications along the former East German border. These fortified positions will help ensure the protection of vital southern infrastructure and population centers."
+ 
+ GER_V_fall_Decision: "Der Verteidigungsfall"
+ GER_V_fall_Decision_desc: "The Verteidigungsfall is the declaration of a national state of defense, activated when Germany faces a direct and serious threat to its sovereignty or territorial integrity. It grants the federal government extraordinary powers, including the mobilization of all military forces, control over key civil sectors, and the restriction of certain civil liberties. This measure ensures the country can rapidly coordinate both military and civilian resources to protect the nation in times of crisis."
+
 
 ### GERMAN INDUSTRY TREE ###
 
@@ -2670,9 +2697,9 @@
  bavaria.2.c: "Die Grunen"
 
 ### News Events
- germany_news.1.t: "Germany declares the V-Fall"
- germany_news.1.d: "For the first time since its introduction in its constitution in 1968, the German government sees the integrity of its state threatened and declares the Verteidigungsfall (defense case). This enables its parliament to enact a series of laws to simplify the administration in fastening the decision making, while the armed forces prepare the defence of german territory."
- germany_news.1.a: "The Tiger awakes"
+ GER_news.01.t: "Germany declares the V-Fall"
+ GER_news.01.d: "For the first time since its introduction in its constitution in 1968, the German government sees the integrity of its state threatened and declares the Verteidigungsfall (defense case). This enables its parliament to enact a series of laws to simplify the administration in fastening the decision making, while the armed forces prepare the defence of german territory."
+ GER_news.01.a: "The Tiger awakes"
  germany_news.2.t: "Air France Flight 4590 Crash, 109 Dead."
  germany_news.2.d: "Air France Flight 4590, a Concorde passenger jet on an international charter flight from Paris to New York, crashed shortly after takeoff. The jet crashed into a hotel in nearby Gonesse two minutes after takeoff. All 9 crew and 100 passengers (96 of which were German) on board were killed, alongside four in the hotel. Six other people in the hotel were critically injured.\n\nThe official investigation was conducted by France's accident investigation bureau, the Bureau of Enquiry and Analysis for Civil Aviation Safety (BEA). Post-accident investigation revealed that the aircraft was over the maximum takeoff weight for ambient temperature and other conditions, and 810 kg (1,790 lb) over the maximum structural weight,loaded so that the centre of gravity was aft of the take-off limit."
  germany_news.2.a: "Rest In Peace"
