--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -79,6 +79,11 @@
  RULE_CUB_Tesak_ALLOWED_DESC: "The Famous Russian Nationalist \"Tesak\" will come to power in Cuba"
  RULE_CUB_Tesak_BLOCKED_DESC: "\"Tesak\" will not come to power in Cuba."
 
+ # MALAWI
+ RULE_MLW_MCA: "@MLW The Malawian Continental Army"
+ RULE_MLW_MCA_ALLOWED_DESC: "§GRemain Calm, Patriots Are In Control§!. After completing the adequate focus, this will allow §YMalawi§! to send intervention forces to any §3Western§! nation on Earth, not just Africa."
+ RULE_MLW_MCA_BLOCKED_DESC: "After completing the adequate focus, §YMalawi§! will be limited to send intervention forces to §3Western§! nations in Africa only."
+
  #Russia
  RUS_AI_BEHAVIOR: "@SOV Russian Federation"
  RULE_OPTION_PUTIN: "United Russia"
